--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.github.danielflower.mavenplugins</groupId>
 	<artifactId>maven-gitlog-plugin</artifactId>
-	<version>1.7.1-WLTECH-SNAPSHOT</version>
+	<version>1.8.0-WLTECH-SNAPSHOT</version>
 
 	<packaging>maven-plugin</packaging>
 	<name>Maven Git Log Plugin</name>
@@ -57,6 +57,12 @@
 			<artifactId>hamcrest-core</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>2.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
